--- a/tailwindcss/index.html
+++ b/tailwindcss/index.html
@@ -6,11 +6,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Olá Tailwind!</title>
 </head>
-<body class="">
-    <main class="">
-        <img class="" src="./img/logo-tailwind.png" alt="Logo">
-        <h1 class="">Olá Tailwind CSS!</h1>
-        <img class="" src="./img/logo-tailwind.png" alt="">
+<body class="bg-gradient-to-r from-purple-400 to-blue-600">
+    <main class="flex flex-col lg:flex-row justify-center items-center w-4/5 mx-auto my-40 p-12 shadow-2xl opacity-50">
+        <img class="w-2/5 lg:w-1/5" src="./img/logo-tailwind.png" alt="Logo">
+        <h1 class="text-4xl lg:text-6xl font-black text-center p-12">Olá Tailwind CSS!</h1>
+        <img class="w-2/5 lg:w-1/5" src="./img/logo-tailwind.png" alt="">
     </main>
 </body>
 </html>
